--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,12 @@ pre {
 ::-moz-selection {
 	/* Code for Firefox */
 	color: #fff;
-	background: #57cbcc;
+	background: #B31119;
 }
 
 ::selection {
 	color: #fff;
-	background: #57cbcc;
+	background: #B31119;
 }
 
 hr {
